Try fix scrollbar

--- a/src/app/components/search-results/search-results.component.css
+++ b/src/app/components/search-results/search-results.component.css
@@ -1,7 +1,7 @@
 
 .content{
   background-color: var(--background-color);
-    max-width: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +44,7 @@
     cursor: pointer;
 }
 .cards-container{
-  width: 70%; display: flex; flex-direction: row; flex-wrap: wrap; margin-top: 1em; margin-bottom: 3em;
+  width: 70vw; display: flex; flex-direction: row; flex-wrap: wrap; margin-top: 1em; margin-bottom: 3em;
 }
 
 @media screen and (max-width: 70em
